--- a/Explorer.csproj
+++ b/Explorer.csproj
@@ -66,10 +66,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="ViewModels\" />
-    </ItemGroup>
-
-    <ItemGroup>
       <MauiXaml Update="Views\MainPage.xaml">
         <SubType>Designer</SubType>
       </MauiXaml>
@@ -80,6 +76,7 @@
         <DependentUpon>MainPage.xaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
+      <Compile Remove="Models\PlaceCategory.cs" />
     </ItemGroup>
 
 </Project>
